--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0px;
             margin: 0px;
             font-family: 'Baloo Bhaina 2', cursive;
-            background: url('img/gym.jpg');
+            background: url('gym.jpg');
             color: white;
         }
         
@@ -119,7 +119,7 @@
 <body>
     <header class="class">
         <div class="left">
-            <img src="img/logo.png" alt="">
+            <img src="logo.png" alt="">
             <div>PPM Fitness</div>
         </div>
         <div class="mid">
